# carla-interface

./: README.md  command.py  libcarla.py  pyproject.toml
_carla/: _generic.py  actor.py  ad_rss.py  blueprint.py  control.py  exception.py  geom.py  light_manager.py  osm2odr.py  snapshot.py  weather.py  world.py
_carla/_c/: traffic_manager.py
_carla/_c/road/: __init__.py
_carla/_c/rpc/: __init__.py
_carla/_c/sensor/data/: __init__.py
src/carla/: command.pyi  libcarla.pyi
src/carla/_carla/: _generic.pyi  actor.pyi  blueprint.pyi  client.pyi  command.pyi  geom.pyi  light_manager.pyi  map.pyi  sensor.pyi  sensor_data.pyi  traffic_manager.pyi  weather.pyi  world.py
src/carla/_carla/_c/: traffic_manager.pyi
src/carla/_carla/_c/sensor/data/: __init__.py
